Fixed a bunch of misc layout features such as title colors, spacing, project/blog cards, etc

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-minimalist {
+  background-color: #161616;
+  background-image: radial-gradient(rgba(51, 51, 51, 0.3) 1px, transparent 1px),
+    radial-gradient(rgba(51, 51, 51, 0.3) 1px, transparent 1px);
+  background-size: 20px 20px;
+  background-position: 0 0, 0px 0px;
+}
